add canvas, no styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -42,3 +42,16 @@ body {
 .menu .menu-item:hover {
 	background: #343434;
 }
+
+.paint {
+	/* position: relative;
+	width: 800px;
+	height: 600px;
+	border: 1px solid black; */
+}
+
+.paint__canvas {
+	/* position: absolute;
+	top: 0;
+	left: 0; */
+}
