--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Doodle+Shadow&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
+
+@keyframes picasso {
+	0% {
+		transform: translateX(3%);
+	}
+	100% {
+		transform: translateX(-10%);
+	}
+}
 
 * {
 	margin: 0;
@@ -45,15 +56,74 @@ body {
 
 .paint {
 	position: relative;
-	background-color: rgba(0, 0, 0, 0.296);
+	padding-top: 10px;
+	padding-bottom: 50px;
+	background-color: rgb(240, 145, 3);
 	/* filter: blur(5px); */
+	height: 630px;
 }
 
-.paint__canvas {
+.paint__close {
+	position: absolute;
+	top: 20%;
+	transform: translateY(-13%);
+	left: 13px;
+	padding: 20px;
 	background-color: white;
-	/* width: 50%;
-	height: 50%; */
-	margin-left: 6%;
+	border-radius: 50%;
+	transition: all 0.3s ease;
+	cursor: pointer;
+	z-index: 150;
+}
+
+.paint__close:before,
+.paint__close:after {
+	position: absolute;
+	top: 19px;
+	left: 8px;
+	content: '';
+	width: 25px;
+	height: 3px;
+	/* padding: 50px; */
+	display: inline-block;
+	background-color: red;
+}
+
+.paint__close:before {
+	transform: rotate(45deg);
+}
+
+.paint__close:hover:before {
+	transition: all 0.6s ease;
+	transform: rotate(360deg);
+}
+.paint__close:hover:after {
+	transition: all 0.6s ease;
+	transform: rotate(-360deg);
+}
+
+.paint__close:after {
+	transform: rotate(-45deg);
+	left: 6px;
+}
+
+.paint__download {
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	padding: 12px 30px;
+	border: 2px solid black;
+	background: transparent;
+	border-radius: 10px;
+	text-transform: uppercase;
+	cursor: pointer;
+	transition: all .5s ease-in-out;
+}
+
+.paint__download:hover {
+	background-color: black;
+	color: white;
 }
 
 .paint__canvas:hover {
@@ -62,7 +132,8 @@ body {
 
 .tools {
 	position: absolute;
-	top: 100px;
+	top: 50%;
+	transform: translateY(-50%);
 	left: 10px;
 	display: flex;
 	list-style: none;
@@ -74,6 +145,7 @@ body {
 	border-radius: 25px;
 	padding: 11px 0;
 	margin: 10px 0;
+	z-index: 150;
 }
 .black,
 .yellow,
@@ -180,4 +252,28 @@ body {
 .clear:hover,
 .fill:hover {
 	transform: translateX(10px);
+}
+
+.paint__canvas {
+	background-color: white;
+	border-radius: 20px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.paint__label {
+	font-size: 80px;
+	font-family: "Rubik Mono One", monospace;
+	font-weight: 400;
+	font-style: normal;
+	animation: picasso 12s infinite linear;
+	font-size: sans-serif;
+	line-height: 1.3;
+	padding: 2px 0;
+	white-space: nowrap;
+	display: inline-block;
+
+	color: black;
 }
