--- a/src/styles.css
+++ b/src/styles.css
@@ -62,13 +62,15 @@ body {
 	background-color: rgb(240, 145, 3);
 	/* filter: blur(5px); */
 	height: 630px;
+	border-bottom: 7px solid black;
+	z-index: 100;
 }
 
 .paint__close {
 	position: absolute;
 	top: 20%;
 	transform: translateY(-13%);
-	left: 13px;
+	left: 15px;
 	padding: 20px;
 	background-color: white;
 	border-radius: 50%;
@@ -81,7 +83,7 @@ body {
 .paint__close:after {
 	position: absolute;
 	top: 19px;
-	left: 8px;
+	left: 7px;
 	content: '';
 	width: 25px;
 	height: 3px;
@@ -111,7 +113,7 @@ body {
 .paint__download {
 	position: absolute;
 	bottom: 0;
-	left: 50%;
+	left: 70%;
 	transform: translateX(-50%);
 	padding: 12px 30px;
 	border: 2px solid black;
@@ -120,6 +122,7 @@ body {
 	text-transform: uppercase;
 	cursor: pointer;
 	transition: all .5s ease-in-out;
+	margin-bottom: 23px;
 }
 
 .paint__download:hover {
@@ -185,19 +188,19 @@ body {
 
 .none {
 	border: none;
-	background: url('./assets/none.png') no-repeat center / 20px 20px;
+	background: url('../assets/none.png') no-repeat center / 20px 20px;
 	height: 33px;
 	cursor: default;
 }
 
 .clear {
 	border: none;
-	background: url('./assets/clear.png') no-repeat center / 20px 20px;
+	background: url('../assets/clear.png') no-repeat center / 20px 20px;
 }
 
 .fill {
 	border: none;
-	background: url('./assets/clearAll.png') no-repeat center / 20px 20px;
+	background: url('../assets/clearAll.png') no-repeat center / 20px 20px;
 }
 
 .black.active {
@@ -262,6 +265,7 @@ body {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	border: 7px solid black;
 }
 
 .paint__label {
@@ -278,6 +282,34 @@ body {
 
 	color: black;
 }
+
+.paint__file {
+	position: absolute;
+	bottom: 6%;
+	left: 30%;
+	transform: translateX(-50%);
+	cursor: pointer;
+}
+
+.paint__file > input {
+	display: none;
+}
+
+.paint__file > label {
+	cursor: pointer;
+	padding: 12px 30px;
+	border: 2px solid black;
+	background: transparent;
+	border-radius: 10px;
+	text-transform: uppercase;
+	transition: all .5s ease-in-out;
+}
+
+.paint__file > label:hover {
+	background-color: black;
+	color: white;
+}
+
 .timer_modal-overlay {
 	position: fixed;
 	left: 40%;
